# notion-watcher

./: README.md  main.py  pyproject.toml
core/: __init__.py  dispatcher.py  watcher.py
notion/: notion_helper.py
src/core/: Untitled-1.json  __init__.py  dispatcher.py  events_queue.py  handlers.py  state_store.py  trigger.py  watcher.py
src/notion/: __init__.py  notion_helper.py  notion_request_queue.py
